# jsonapiunit

./: Cargo.toml  README.md  apiunit.jsonc
example/: Cargo.toml  apiunit.json  apiunit.jsonc
example/apiTest/: a_loginTest.jsonc  b_userDetails.jsonc  c_categories.jsonc  loginTest.jsonc  userDetails.jsonc
example/src/: main.rs
src/: config.rs  interpreter.rs  main.rs  test_case.rs  variables.rs
