[package]
name = "json-api-tester"
version = "0.1.0"
authors = ["WhizSid <whizsid@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-hjson = "0.9.1"
http = "0.2.0"
glob = "0.3.0"
Boa = "0.6.0"

[workspace]

members = [
    "example"
]