[package]
name = "jsonapiunit"
version = "0.1.3"
authors = ["WhizSid <whizsid@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
http = "0.2.0"
glob = "0.3.0"
Boa = "0.6.0"
url = "2.1.1"
hyper = "0.13.2"
hyper-proxy = "0.6.0"
json_comments = "0.2.0"
tokio = { version = "0.2.13", features = ["macros", "io-util"] }
typed-headers = "0.2.0"
regex = "1.3.4"
futures = "0.3.4"
colored = "1.9.3"
clap = "2.33.0"

[workspace]

members = [
    "example"
]

[package.metadata.deb]
maintainer = "WhizSid <whizsid@aol.com>"
copyright = "2020, WhizSid <whizsid@aol.com>"
license-file = ["LICENSE","4"]
extended-description = """\
TypeScript like unit testing framework for testing REST JSON APIs."""
depends = "$auto"
section = "utility"
priority = "optional"