[package]
name = "example"
version = "0.1.0"
authors = ["WhizSid <whizsid@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.3"
serde_derive = "1.0.104"
serde = "1.0.104"